# cmakeLearn

./: CMakeLists.txt  README.md
cmake_001/: CMakeLists.txt
cmake_001/src/: main.cpp
cmake_002/: CMakeLists.txt
cmake_002/json/: CMakeLists.txt
cmake_002/src/: conf.json  main.cpp  main.cpp~  power.cpp  power.h
cmake_003/: CMakeLists.txt
cmake_003/math/: mathfunction.cpp
cmake_003/src/: main.cpp  main.cpp~
cmake_004/: CMakeLists.txt  main.cpp
cmake_004/src/: CMakeLists.txt
cmake_005/: CMakeLists.txt  main.cpp
cmake_005/math/: mathfunction.cpp
cmake_006/: CMakeLists.txt
cmake_006/math/: CMakeLists.txt
cmake_007/: CMakeLists.txt  main.cpp
cmake_007/math/: CMakeLists.txt
cmake_008/: CMakeLists.txt
cmake_009/: CMakeLists.txt
cmake_009/math/: mathfunction.h
