cmake_minimum_required(VERSION 3.12)

project(cmake_learn)

aux_source_directory(. DIR_SRCS)

add_subdirectory(cmake_001)
add_subdirectory(cmake_002)
add_subdirectory(cmake_003)
add_subdirectory(cmake_004)
add_subdirectory(cmake_005)
add_subdirectory(cmake_006)
add_subdirectory(cmake_007)
#add_subdirectory(cmake_008)
